--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ nav {
 .hero{
     width:100%;
     max-width:1600px;
-    background-image:url('../assets/hero-bg.png');
+    background-image:url('assets/hero-bg.png');
     background-repeat:no-repeat;
     background-size:cover;
     background-position:center;
