--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
 button:hover {
     transform: scaleY(1.05);
     background-color: #06010a;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 /* hamburger color */
@@ -23,48 +23,50 @@ nav {
 }
 
 /* hero section */
-.hero{
-    width:100%;
-    max-width:1600px;
-    background-image:url('/assets/hero-bg.png');
-    background-repeat:no-repeat;
-    background-size:cover;
-    background-position:center;
-    margin:0 auto;
-    text-align:center;
-    min-height:700px;
+.hero {
+    width: 100%;
+    max-width: 1600px;
+    background-image: url('../assets/hero-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 0 auto;
+    text-align: center;
+    min-height: 700px;
     /* padding-bottom:100px; */
 
 }
 
-.hero .container{
-    position:relative;
-    max-width:550px;
-    min-height:558px;
-    display:flex;
-    flex-direction:column;
+.hero .container {
+    position: relative;
+    max-width: 550px;
+    min-height: 558px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    gap:40px;
+    gap: 40px;
     /* left:625px;
     top:45px; */
-    left:525px;
-    top:45px;
-    
-}
-.circle{
-    position:absolute;
-    left:100px;
-    top:0px;
-    z-index:5;
-    width:350px;
-    height:350px;
+    left: 525px;
+    top: 45px;
 
 }
-.mic{
-    position:absolute;
-    top:69px;
-    left:210px;
-    z-index:10;
+
+.circle {
+    position: absolute;
+    left: 100px;
+    top: 0px;
+    z-index: 5;
+    width: 350px;
+    height: 350px;
+
+}
+
+.mic {
+    position: absolute;
+    top: 69px;
+    left: 210px;
+    z-index: 10;
 }
 
 
@@ -86,29 +88,30 @@ nav {
     box-shadow: 0px 4px 8px 1px gray;
 }
 
-.brand-desc{
-    position:absolute;
-    top:390px;
+.brand-desc {
+    position: absolute;
+    top: 390px;
 }
 
-.brand-desc h3{
-    font-weight:bolder;
-    font-size:3.75rem;
-    text-align:center;
-    color:white;
+.brand-desc h3 {
+    font-weight: bolder;
+    font-size: 3.75rem;
+    text-align: center;
+    color: white;
 
 }
-.brand-desc p{
-    color:rgba(239, 231, 231, 0.676);
+
+.brand-desc p {
+    color: rgba(239, 231, 231, 0.676);
 }
 
-.btn-cls{
-    position:absolute;
-    top:500px;
-    display:flex;
-    gap:8px;
-    margin-top:20px;
-    margin-bottom:100px;
+.btn-cls {
+    position: absolute;
+    top: 500px;
+    display: flex;
+    gap: 8px;
+    margin-top: 20px;
+    margin-bottom: 100px;
 
 }
 
@@ -176,7 +179,8 @@ nav {
 
 
 /* choose techwave */
-.choose-techwave,.feature {
+.choose-techwave,
+.feature {
     max-width: 1600px;
     margin: 0 auto;
     padding: 200px 120px;
@@ -244,8 +248,8 @@ nav {
     grid-column: span 2;
 }
 
-footer{
-    background-image: url('/assets/footer-bg.png');
+footer {
+    background-image: url('../assets/footer-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -257,7 +261,7 @@ footer{
 /* Responsiveness */
 @media screen and (max-width:640px) {
     .podcast {
-        max-width: 440px;
+        max-width:440px;
         padding: 40px 20px 40px 20px;
     }
 
@@ -324,70 +328,73 @@ footer{
 
     }
 
-    .feature{
-        max-width:440px;
-        padding:40px 20px;
+    .feature {
+        max-width: 440px;
+        padding: 40px 20px;
     }
 
-/* hero */
+    /* hero */
 
-    .hero{
-    width:100%;
-    max-width:440px;
-    
-}
+    .hero {
+        width: 100%;
+        max-width: 440px;
 
-.hero .container{
-    width:100%;
-    max-width:400px;
-    height:386px;
-    gap:24px;
-    /* left:625px;
+    }
+
+    .hero .container {
+        width: 100%;
+        max-width: 400px;
+        height: 386px;
+        gap: 24px;
+        /* left:625px;
     top:45px; */
-    left:20px;
-    top:40px;
-    
-}
-.circle{
-    left:100px;
-    top:50px;
-    width:200px;
-    height:200px;
+        left: 20px;
+        top: 40px;
+
+    }
+
+    .circle {
+        left: 100px;
+        top: 50px;
+        width: 200px;
+        height: 200px;
 
 
-}
-.mic{
-    top:110px;
-    left:160px;
-    width: 80px;
-    height:80px;
-}
+    }
+
+    .mic {
+        top: 110px;
+        left: 160px;
+        width: 80px;
+        height: 80px;
+    }
 
 
 
-.badge {
-    
-    left:230px;
-    top: 60px;
+    .badge {
 
-}
+        left: 230px;
+        top: 60px;
 
-.brand-desc{
-    top:264px;
-}
+    }
 
-.brand-desc h3{
-    font-size:2rem;
-}
-.brand-desc p{
-    color:rgba(239, 231, 231, 0.676);
-}
+    .brand-desc {
+        top: 264px;
+    }
 
-.btn-cls{
-    top:382px;
-    margin-top:10px;
+    .brand-desc h3 {
+        font-size: 2rem;
+    }
 
-}
+    .brand-desc p {
+        color: rgba(239, 231, 231, 0.676);
+    }
+
+    .btn-cls {
+        top: 382px;
+        margin-top: 10px;
+
+    }
 
 
 
